unpackaged/main/default/objects/Opportunity/fields/Account_Corp_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Corp_ID__c</fullName>
    <label>Account Corp ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>