unpackaged/main/default/objects/Opportunity/fields/Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive__c</fullName>
    <label>Account Executive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>