unpackaged/main/default/objects/Opportunity/fields/Account_Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Account_Mailing_State__c</fullName>
    <formula>Account.PersonContact.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Mailing State</label>
    <type>Text</type>
</CustomField>