unpackaged/main/default/objects/Opportunity/fields/Account_Manager_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Sales_Rep__c</fullName>
    <label>Account Manager(Sales Rep)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>