unpackaged/main/default/objects/Opportunity/fields/Actual_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Actual_Enrollment__c</fullName>
    <label>Actual Enrollment</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>