unpackaged/main/default/objects/Opportunity/fields/Additional_Information_Final_Rates__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information_Final_Rates__c</fullName>
    <label>Additional Information(Final Rates)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 Page Applications</fullName>
            </value>
            <value>
                <fullName>9 Page Applications</fullName>
            </value>
            <value>
                <fullName>Claims Experience</fullName>
            </value>
            <value>
                <fullName>Enrollment by Plan</fullName>
            </value>
            <value>
                <fullName>High Claimants</fullName>
            </value>
            <value>
                <fullName>Renewal Calculation</fullName>
            </value>
            <value>
                <fullName>Renewal Rates</fullName>
            </value>
            <value>
                <fullName>Top Provider List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>