unpackaged/main/default/objects/Opportunity/fields/Agent_Blank__c.field-meta.xml
<CustomField>
    <fullName>Agent_Blank__c</fullName>
    <description>Formula field to indicate if Agent lookup is blank</description>
    <formula>IF(ISBLANK(Agent__c),&quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Blank</label>
    <type>Text</type>
</CustomField>