unpackaged/main/default/objects/Opportunity/fields/Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Agent_ID__c</fullName>
    <description>ID of the related Agent</description>
    <externalId>true</externalId>
    <label>Agent ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>