unpackaged/main/default/objects/Opportunity/fields/Business_Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Group_Type__c</fullName>
    <description>Related to LOB</description>
    <label>Business Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Group_Type</valueSetName>
    </valueSet>
</CustomField>