unpackaged/main/default/objects/Opportunity/fields/Census__c.field-meta.xml
<CustomField>
    <fullName>Census__c</fullName>
    <description>For Group Opportunities, Census yes or no</description>
    <label>Census</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>