unpackaged/main/default/objects/Opportunity/fields/Changes_to_Make__c.field-meta.xml
<CustomField>
    <fullName>Changes_to_Make__c</fullName>
    <description>For Renewals only - alerts Sales Team whether any changes(plan changes or member/enrollment changes)need to occur</description>
    <label>Changes to Make?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>