unpackaged/main/default/objects/Opportunity/fields/Closed_Won_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Reason__c</fullName>
    <label>Closed Won Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative Fee</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Provider Network</fullName>
            </value>
            <value>
                <fullName>Quartz Services</fullName>
            </value>
            <value>
                <fullName>Rate Relief</fullName>
            </value>
            <value>
                <fullName>Relationship with Quartz</fullName>
            </value>
            <value>
                <fullName>Stop Loss Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>