unpackaged/main/default/objects/Opportunity/fields/CMS_Avg_Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>CMS_Avg_Number_of_Employees__c</fullName>
    <description>CMS survey data, average number of employees</description>
    <label>CMS Avg Number of Employees</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>