unpackaged/main/default/objects/Opportunity/fields/CMS_Changes_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>CMS_Changes_Confirmed__c</fullName>
    <label>CMS Changes Confirmed</label>
    <type>Date</type>
</CustomField>