unpackaged/main/default/objects/Opportunity/fields/CMS_COBRA_Eligible__c.field-meta.xml
<CustomField>
    <fullName>CMS_COBRA_Eligible__c</fullName>
    <description>CMS Survey data, COBRA eligible</description>
    <label>CMS COBRA Eligible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>