unpackaged/main/default/objects/Opportunity/fields/CMS_County__c.field-meta.xml
<CustomField>
    <fullName>CMS_County__c</fullName>
    <label>CMS County</label>
    <length>100</length>
    <type>Text</type>
</CustomField>