unpackaged/main/default/objects/Opportunity/fields/CMS_Medicare_Disability_Provision__c.field-meta.xml
<CustomField>
    <fullName>CMS_Medicare_Disability_Provision__c</fullName>
    <description>For Secondary Payer</description>
    <label>CMS Medicare Disability Provision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>