unpackaged/main/default/objects/Opportunity/fields/CMS_Number_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>CMS_Number_Enrolled__c</fullName>
    <label>CMS Number Enrolled</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>