unpackaged/main/default/objects/Opportunity/fields/CMS_Total_Number_of_Eligible_Employees__c.field-meta.xml
<CustomField>
    <fullName>CMS_Total_Number_of_Eligible_Employees__c</fullName>
    <label>CMS Total Number of Eligible Employees</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>