unpackaged/main/default/objects/Opportunity/fields/Commission_Change_Details__c.field-meta.xml
<CustomField>
    <fullName>Commission_Change_Details__c</fullName>
    <label>Commission Change Details</label>
    <type>TextArea</type>
</CustomField>