unpackaged/main/default/objects/Opportunity/fields/Commissions__c.field-meta.xml
<CustomField>
    <fullName>Commissions__c</fullName>
    <description>For Quote Request and Renewal Request</description>
    <label>Commissions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Non-Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>