unpackaged/main/default/objects/Opportunity/fields/Competitor_Coming_From__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Coming_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For new group opportunities only. Mapped from lead conversion.</description>
    <label>Competitor Coming From</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Competitor Coming From)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>