unpackaged/main/default/objects/Opportunity/fields/Contribution_Scheme_Single__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Scheme_Single__c</fullName>
    <label>Contribution Scheme - Single</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>