unpackaged/main/default/objects/Opportunity/fields/County_Account__c.field-meta.xml
<CustomField>
    <fullName>County_Account__c</fullName>
    <description>Formula field to pull in the opportunity&#39;s account&#39;s county name to use in MA enrollment link</description>
    <formula>Account.County__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>County-Account</label>
    <type>Text</type>
</CustomField>