unpackaged/main/default/objects/Opportunity/fields/Coverage_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Activation_Date__c</fullName>
    <description>Date Coverage becomes effective</description>
    <label>Coverage Activation Date</label>
    <type>Date</type>
</CustomField>