unpackaged/main/default/objects/Opportunity/fields/Creator__c.field-meta.xml
<CustomField>
    <fullName>Creator__c</fullName>
    <label>Creator</label>
    <length>32</length>
    <type>Text</type>
</CustomField>