unpackaged/main/default/objects/Opportunity/fields/Current_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Current_Carrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Should default to Quartz Benefits if a renewal opportunity</description>
    <label>Current Carrier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Current Carrier)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>