unpackaged/main/default/objects/Opportunity/fields/Date_Request_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Request_Received__c</fullName>
    <description>Date that sales received the request for opportunity, could be before the opportunity created date</description>
    <label>Date Request Received</label>
    <type>Date</type>
</CustomField>