unpackaged/main/default/objects/Opportunity/fields/Date_Requested_for_Underwriting_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_Requested_for_Underwriting_Review__c</fullName>
    <description>For underwriting Team checklist</description>
    <label>Date Requested for Underwriting Review</label>
    <type>DateTime</type>
</CustomField>