unpackaged/main/default/objects/Opportunity/fields/Date_Submitted_for_Peer_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted_for_Peer_Review__c</fullName>
    <description>For Underwriting Team checklist</description>
    <label>Date Submitted for Peer Review</label>
    <type>Date</type>
</CustomField>