unpackaged/main/default/objects/Opportunity/fields/Deductible_Credit__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Credit__c</fullName>
    <description>For Quote Request</description>
    <label>Deductible Credit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>