unpackaged/main/default/objects/Opportunity/fields/Difference_from_Current_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Difference_from_Current_Carrier__c</fullName>
    <description>Percentage difference from current carrier</description>
    <label>Difference from Current Carrier</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>