unpackaged/main/default/objects/Opportunity/fields/Dual_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Dual_Carrier__c</fullName>
    <description>also use for Quote Request and Renewal Request to replace &quot;Sole Carrier&quot; field</description>
    <label>Dual Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>