unpackaged/main/default/objects/Opportunity/fields/Dual_Carrier_Details__c.field-meta.xml
<CustomField>
    <fullName>Dual_Carrier_Details__c</fullName>
    <label>Dual Carrier Details</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>