unpackaged/main/default/objects/Opportunity/fields/Election_Period__c.field-meta.xml
<CustomField>
    <fullName>Election_Period__c</fullName>
    <label>Election Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>