unpackaged/main/default/objects/Opportunity/fields/Employee_Application__c.field-meta.xml
<CustomField>
    <fullName>Employee_Application__c</fullName>
    <description>Employee Application yes or no</description>
    <label>Employee Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>