unpackaged/main/default/objects/Opportunity/fields/Employee_Application_Notes__c.field-meta.xml
<CustomField>
    <fullName>Employee_Application_Notes__c</fullName>
    <label>Employee Application Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>