unpackaged/main/default/objects/Opportunity/fields/Employee_Group_Application_Notes__c.field-meta.xml
<CustomField>
    <fullName>Employee_Group_Application_Notes__c</fullName>
    <label>Employee Group Application Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>