unpackaged/main/default/objects/Opportunity/fields/Employee_Waivers__c.field-meta.xml
<CustomField>
    <fullName>Employee_Waivers__c</fullName>
    <description>Employee Waivers yes or no</description>
    <label>Employee Waivers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>