unpackaged/main/default/objects/Opportunity/fields/Estimated_Employee__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Employee__c</fullName>
    <label>Estimated Employee</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>