unpackaged/main/default/objects/Opportunity/fields/Estimated_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Enrollment__c</fullName>
    <label>Estimated Enrollment</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>