unpackaged/main/default/objects/Opportunity/fields/Estimated_Household_Size__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Household_Size__c</fullName>
    <label>Estimated Household Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>