unpackaged/main/default/objects/Opportunity/fields/Final_Renewal_Increase__c.field-meta.xml
<CustomField>
    <fullName>Final_Renewal_Increase__c</fullName>
    <label>Final Renewal Increase %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>