unpackaged/main/default/objects/Opportunity/fields/Going_to_bid_this_year__c.field-meta.xml
<CustomField>
    <fullName>Going_to_bid_this_year__c</fullName>
    <description>For Market Insights section</description>
    <label>Going to bid this year?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>