unpackaged/main/default/objects/Opportunity/fields/Group_s_Level_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Group_s_Level_of_Interest__c</fullName>
    <description>For Quote Request</description>
    <label>Group&#39;s Level of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-25%</fullName>
            </value>
            <value>
                <fullName>26-50%</fullName>
            </value>
            <value>
                <fullName>51-75%</fullName>
            </value>
            <value>
                <fullName>76-100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>