unpackaged/main/default/objects/Opportunity/fields/Has_Grandfathered_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Has_Grandfathered_Benefits__c</fullName>
    <description>For Renewal Request</description>
    <label>Has Grandfathered Benefits?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>