unpackaged/main/default/objects/Opportunity/fields/HRA__c.field-meta.xml
<CustomField>
    <fullName>HRA__c</fullName>
    <description>Health Reimbursement Arrangement(HRA)</description>
    <label>HRA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>