unpackaged/main/default/objects/Opportunity/fields/Initial_Alternates__c.field-meta.xml
<CustomField>
    <fullName>Initial_Alternates__c</fullName>
    <label>Initial Alternates</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>