unpackaged/main/default/objects/Opportunity/fields/Integration_Source__c.field-meta.xml
<CustomField>
    <fullName>Integration_Source__c</fullName>
    <description>Used in post processing to store the integration source of the opportunity record.</description>
    <label>Integration Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FIRE</fullName>
            </value>
            <value>
                <fullName>PDRE</fullName>
            </value>
            <value>
                <fullName>MyPlanTools</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>