unpackaged/main/default/objects/Opportunity/fields/Likelihood_will_Go_to_Market__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_will_Go_to_Market__c</fullName>
    <description>For Renewal Request and Market Insights section</description>
    <label>Likelihood will Go to Market?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-25%</fullName>
            </value>
            <value>
                <fullName>26-50%</fullName>
            </value>
            <value>
                <fullName>51-75%</fullName>
            </value>
            <value>
                <fullName>76-100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>