unpackaged/main/default/objects/Opportunity/fields/Medicare_Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Claim_Number__c</fullName>
    <label>Medicare Claim Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>