unpackaged/main/default/objects/Opportunity/fields/Medicare_Med_Part_A_Date__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Med_Part_A_Date__c</fullName>
    <label>Medicare Med Part A Date</label>
    <type>Date</type>
</CustomField>