unpackaged/main/default/objects/Opportunity/fields/Missing_Information_Requested__c.field-meta.xml
<CustomField>
    <fullName>Missing_Information_Requested__c</fullName>
    <label>Missing Information Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>jj</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>