unpackaged/main/default/objects/Opportunity/fields/Modifier__c.field-meta.xml
<CustomField>
    <fullName>Modifier__c</fullName>
    <label>Modifier</label>
    <length>32</length>
    <type>Text</type>
</CustomField>