unpackaged/main/default/objects/Opportunity/fields/MPT_Application_Id__c.field-meta.xml
<CustomField>
    <fullName>MPT_Application_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Add to Medicare Advantage section and only display if LOB = Medicare Advantage</description>
    <externalId>true</externalId>
    <label>MPT Application Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>