unpackaged/main/default/objects/Opportunity/fields/MPT_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>MPT_Tracking_Number__c</fullName>
    <label>MPT Tracking Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>