unpackaged/main/default/objects/Opportunity/fields/Network_Name__c.field-meta.xml
<CustomField>
    <fullName>Network_Name__c</fullName>
    <label>Network Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>