unpackaged/main/default/objects/Opportunity/fields/Non_Standard_Commissions_Details__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Commissions_Details__c</fullName>
    <label>Non-Standard Commissions Details</label>
    <type>TextArea</type>
</CustomField>