unpackaged/main/default/objects/Opportunity/fields/Onboarding_Benefit_Config_Complete__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Benefit_Config_Complete__c</fullName>
    <label>Onboarding - Benefit Config Complete</label>
    <type>DateTime</type>
</CustomField>