unpackaged/main/default/objects/Opportunity/fields/Onboarding_Cycle_Time__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Cycle_Time__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Cycle Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>