unpackaged/main/default/objects/Opportunity/fields/Onboarding_Enrollment_Complete__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Enrollment_Complete__c</fullName>
    <label>Onboarding - Enrollment Complete</label>
    <type>DateTime</type>
</CustomField>