unpackaged/main/default/objects/Opportunity/fields/Onboarding_Group_Records_Complete__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Group_Records_Complete__c</fullName>
    <label>Onboarding - Group Records Complete</label>
    <type>DateTime</type>
</CustomField>