unpackaged/main/default/objects/Opportunity/fields/Onboarding_ID_Cards_Released__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_ID_Cards_Released__c</fullName>
    <label>Onboarding - ID Cards Released</label>
    <type>DateTime</type>
</CustomField>