unpackaged/main/default/objects/Opportunity/fields/Onboarding_Quality_Audit_Complete__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Quality_Audit_Complete__c</fullName>
    <label>Onboarding - Quality Audit Complete</label>
    <type>DateTime</type>
</CustomField>