unpackaged/main/default/objects/Opportunity/fields/Onboarding_Sales_Started__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Sales_Started__c</fullName>
    <label>Onboarding - Sales Started</label>
    <type>DateTime</type>
</CustomField>