unpackaged/main/default/objects/Opportunity/fields/Oppty_Id__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Id__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oppty_Id</label>
    <type>Text</type>
</CustomField>