unpackaged/main/default/objects/Opportunity/fields/Other_Carrier_Score__c.field-meta.xml
<CustomField>
    <fullName>Other_Carrier_Score__c</fullName>
    <label>Other Carrier Score</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>