unpackaged/main/default/objects/Opportunity/fields/Other_Market_Intel__c.field-meta.xml
<CustomField>
    <fullName>Other_Market_Intel__c</fullName>
    <label>Other Market Intel</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>