unpackaged/main/default/objects/Opportunity/fields/Other_Riders__c.field-meta.xml
<CustomField>
    <fullName>Other_Riders__c</fullName>
    <label>Other Riders</label>
    <type>TextArea</type>
</CustomField>