unpackaged/main/default/objects/Opportunity/fields/Ownership_Papers__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Papers__c</fullName>
    <description>Ownership papers,yes or no</description>
    <label>Ownership Papers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>