unpackaged/main/default/objects/Opportunity/fields/Ownership_Papers_Notes__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Papers_Notes__c</fullName>
    <label>Ownership Papers Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>