unpackaged/main/default/objects/Opportunity/fields/Part_D__c.field-meta.xml
<CustomField>
    <fullName>Part_D__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Part D</label>
    <type>Checkbox</type>
</CustomField>