unpackaged/main/default/objects/Opportunity/fields/Part_of_Sealed_Bid_or_RFP__c.field-meta.xml
<CustomField>
    <fullName>Part_of_Sealed_Bid_or_RFP__c</fullName>
    <description>For Renewal Request</description>
    <label>Part of Sealed Bid or RFP?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>