unpackaged/main/default/objects/Opportunity/fields/Payroll_Records__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Records__c</fullName>
    <description>Payroll Record , yes or no</description>
    <label>Payroll Records</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>