unpackaged/main/default/objects/Opportunity/fields/Payroll_Records_Notes__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Records_Notes__c</fullName>
    <label>Payroll Records Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>