unpackaged/main/default/objects/Opportunity/fields/PCP_Rider_Details__c.field-meta.xml
<CustomField>
    <fullName>PCP_Rider_Details__c</fullName>
    <label>PCP Rider Details</label>
    <type>TextArea</type>
</CustomField>